# deepseek-v4-flash-kv-quantization

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  README.md  RUNPOD_START_HERE.md  START_HERE.md  pyproject.toml
artifacts/calibration_smoke/: activation_stats.json  heldout_eval.json  precision_map.json  report.json  (+2 more)
configs/: bench_runpod_4gpu.json  bench_tiny_local.json  expectations_gx10.json  expectations_runpod.json  source_pins.json
docs/: DECISIONS.md  DECISIONS_ADDENDUM_D017.md  DGX_PHASE_PLAN.md  ENGINEERING_REPORT.md  FINAL_REPORT.md  FUTURE_WORK.md  GCP_TRANSITION.md  PIP_FREEZE_GX10.txt  PROJECT_BRIEF.md  QUANTIZATION_INJECTION_PLAN.md  REFERENCE_PORT_MAP.md  REFERENCE_REPO_AUDIT.md  REPRODUCIBILITY.md  RUNPOD_HANDOFF_CHECKLIST.md  RUNPOD_PHASE_B_PLAN.md  V4_CACHE_ARCHITECTURE.md  WORKLOG.md  results_manifest.json
prompts/: 01_ARCHITECTURE_DISCOVERY.md  02_OFFICIAL_POLICY_QDQ_SIMULATION.md  03_CALIBRATION_PLUMBING.md  04_ACTUAL_STORAGE_PROTOTYPE.md  05_BENCHMARK_RUNPOD_TOOLING.md
scripts/: bootstrap_workspace.sh  capture_environment.sh
tests/: test_actual_storage.py  test_benchmark.py  test_calibration.py  test_calibration_data.py  test_mapped_storage.py  test_p2p_workaround.py  test_qdq_simulation.py  test_retrieval.py  test_v4_cache_semantics.py
tools/: b3_identity_gates.py  benchmark_cache.py  compute_map_bytes.py  generate_results_manifest.py  hardware_smoke.py  inspect_v4_cache.py  mapped_storage_gate.py  measure_cache_memory.py  p2p_stress_check.py  run_calibration_full.py  run_calibration_smoke.py  run_qdq_simulation.py  runpod_landing_test.py
(+76 files in other folders)
