[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "v4-kv-quant"
version = "0.1.0"
description = "DeepSeek-V4-Flash KV-cache quantization experiments (GX10 local phase)"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
